:wrench: リンク記述忘れ修正、レイアウト微調整

--- a/mypage/edit/info.html
+++ b/mypage/edit/info.html
@@ -27,6 +27,20 @@
         </div>
     </header>
     <div class="account-info-body">
+        <!-- // 3 Account-information links-->
+        <div class="preview-side-menu">
+            <div class="preview-side-menu__area">
+                <div class="preview-side-menu__link">
+                    <p class="preview-side-menu__current-link">一般</p>
+                </div>
+                <div class="preview-side-menu__link">
+                    <a href="../preview/resume.html">個人履歷</a>
+                </div>
+                <div class="preview-side-menu__link">
+                    <a href="../preview/skill.html">自我評量</a>
+                </div>
+            </div>
+        </div>
         <!-- white-box Account-information -->
         <div class="account-info-edit">
             <form class="form-account-info" action="" method="post" enctype="multipart/form-data">
@@ -65,7 +79,7 @@
                     </tr>
                 </table>
                 <div class="submit-button">
-                    <button type="submit">采用</button>
+                    <button type="submit">更新</button>
                 </div>
             </form>
         </div>
