--- a/mypage/edit/skill.html
+++ b/mypage/edit/skill.html
@@ -229,6 +229,7 @@
                 </div>
                 <div class="info-submit">
                     <button type="submit" name="" class="button-bottom">更新</button>
+                    <a href="../preview/skill.html" class="button-bottom">上一頁(Back to Preview Skill)</a>
                 </div>
             </div>
         </div>
