--- a/mypage/preview/skill.html
+++ b/mypage/preview/skill.html
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div class="submit-button">
-                    <a href src="">修改</a>
+                    <a href src="../edit/skill.html">修改</a>
                 </div>
             </div>
         </div>
