--- a/user/login.html
+++ b/user/login.html
@@ -53,7 +53,7 @@
                 </button>
             </div>
             <div class="attention1">
-                <p>如果你忘記 ID帳或是密碼,請點擊 <a href="">忘記密碼</a><br>尚未註冊會員,請至 <a href="">註冊會員</a> 免費申請</p>
+                <p>如果你忘記 ID帳或是密碼,請點擊 <a href="">忘記密碼</a><br>尚未註冊會員,請至 <a href="../reg/step1.html">註冊會員</a> 免費申請</p>
             </div>
         </div>
     </form>
