--- a/mypage/preview/info.html
+++ b/mypage/preview/info.html
@@ -95,7 +95,7 @@
                     </tr>
                 </table>
                 <div class="submit-button">
-                    <a href src="">修改</a>
+                    <a href src="../edit/info.html">修改</a>
                 </div>
             </div>
         </div>
