:wrench:マイページからパスワード欄削除

--- a/mypage/preview/info.html
+++ b/mypage/preview/info.html
@@ -50,19 +50,7 @@
                     <tr>
                         <td>ID帳號</td>
                         <td>
-                            <p>originalId</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>密碼</td>
-                        <td>
-                            <p>************</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>再次輸入密碼</td>
-                        <td>
-                            <p>************</p>
+                            <p>Original</p>
                         </td>
                     </tr>
                     <tr>
